--- a/moduleMulitFirst/moduleMulitFirst-two/pom.xml
+++ b/moduleMulitFirst/moduleMulitFirst-two/pom.xml
@@ -24,4 +24,31 @@
             <version>2.5.5</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>moduleMulitFirst-two</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>com.hughwang.shade.App</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
