--- a/moduleMulitFirst/moduleMulitFirst-two/pom.xml
+++ b/moduleMulitFirst/moduleMulitFirst-two/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>dubbo</artifactId>
             <version>2.5.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.10</version>
+        </dependency>
+
     </dependencies>
 
     <build>
