--- a/moduleMulitFirst/moduleMulitFirst-two/pom.xml
+++ b/moduleMulitFirst/moduleMulitFirst-two/pom.xml
@@ -27,6 +27,12 @@
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
             <version>3.4.10</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
     </dependencies>
